Closed
Bug 239494
Opened 21 years ago
Closed 21 years ago
Typo in nsSchemaSimpleTypes.cpp
Categories
(Core Graveyard :: Web Services, defect)
Core Graveyard
Web Services
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: joerg_brunsmann, Assigned: raccettura)
References
()
Details
Attachments
(1 file)
788 bytes,
patch
|
doronr
:
review+
jst
:
superreview+
chofmann
:
approval1.7+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; WinNT4.0; en-US; rv:1.6) Gecko/20040206 Firefox/0.8
Build Identifier: Mozilla/5.0 (Windows; U; WinNT4.0; en-US; rv:1.6) Gecko/20040206 Firefox/0.8
IDREF -> IDREFS
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
Assignee | ||
Updated•21 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee | ||
Comment 1•21 years ago
|
||
I think this is a bug, and I think this is a patch.
Assignee: web-services → robert
Status: NEW → ASSIGNED
Assignee | ||
Comment 2•21 years ago
|
||
Comment on attachment 145377 [details] [diff] [review]
Patch v1
Is SR needed for this?
Attachment #145377 -
Flags: review?(timeless)
Assignee | ||
Updated•21 years ago
|
Flags: blocking1.7?
Comment 3•21 years ago
|
||
Comment on attachment 145377 [details] [diff] [review]
Patch v1
IDREFS is indeed correct -
http://www.w3.org/TR/2000/CR-xmlschema-2-20001024/#IDREFS
Attachment #145377 -
Flags: superreview?(jst)
Attachment #145377 -
Flags: review?(timeless)
Attachment #145377 -
Flags: review+
Comment 4•21 years ago
|
||
Comment on attachment 145377 [details] [diff] [review]
Patch v1
sr=jst. 1.7 material, IMO.
Attachment #145377 -
Flags: superreview?(jst)
Attachment #145377 -
Flags: superreview+
Attachment #145377 -
Flags: approval1.7?
Comment 5•21 years ago
|
||
Comment on attachment 145377 [details] [diff] [review]
Patch v1
a=chofmann for 1.7
Attachment #145377 -
Flags: approval1.7? → approval1.7+
Comment 6•21 years ago
|
||
Checking in extensions/webservices/schema/src/nsSchemaSimpleTypes.cpp;
/cvsroot/mozilla/extensions/webservices/schema/src/nsSchemaSimpleTypes.cpp,v
<-- nsSchemaSimpleTypes.cpp
new revision: 1.10; previous revision: 1.9
done
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Flags: blocking1.7?
Resolution: --- → FIXED
Updated•7 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•