Bug 239494 Typo in nsSchemaSimpleTypes.cpp patch by Robert J. Accettura <robert@accettura.com> r=doron sr=jst a=chofmann